# palvox

./: shell.nix
nix/: pkgs.nix
palvox/: Cargo.toml
palvox/src/: assets.rs  input.rs  main.rs  render.rs
palvox/src/pipeline/: mod.rs  quad.rs  triangle.rs
palvox/src/shaders/: screenquad.vs
