[package]
name = "palvox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.9.0"
glfw = "0.45"
luminance = { version = "0.48.0-dev", features = ["mint"], git = "https://github.com/hadronized/luminance-rs.git" }
luminance-glfw = { version = "0.19.0-dev", git = "https://github.com/hadronized/luminance-rs.git" }
mint = "0.5.9"